ElasticIP.tf
#creates a Elastic ip
resource "aws_eip" "nat_eip" {
  tags = {
    Name = "nat-eip"
  }
}
